Make the request using URLSession

--- a/WeatherApp/View/Base.lproj/Main.storyboard
+++ b/WeatherApp/View/Base.lproj/Main.storyboard
@@ -43,24 +43,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pZW-cS-jGE">
-                                <rect key="frame" x="0.0" y="101" width="414" height="730"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Latitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mG-af-dJ7">
+                                <rect key="frame" x="45" y="239" width="126" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Logitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgZ-d9-oBc">
+                                <rect key="frame" x="211" y="239" width="102" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="pZW-cS-jGE" firstAttribute="trailing" secondItem="yFb-qM-01k" secondAttribute="trailing" id="OVG-Fr-qHD"/>
-                            <constraint firstItem="pZW-cS-jGE" firstAttribute="leading" secondItem="yFb-qM-01k" secondAttribute="leading" id="dxM-Eu-J1o"/>
-                            <constraint firstAttribute="bottom" secondItem="pZW-cS-jGE" secondAttribute="bottom" id="tWF-my-yl5"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="yFb-qM-01k"/>
                     </view>
                     <navigationItem key="navigationItem" id="CBn-Dh-ZEx"/>
+                    <connections>
+                        <outlet property="latLabel" destination="0mG-af-dJ7" id="iTW-uk-5nF"/>
+                        <outlet property="lonLabel" destination="DgZ-d9-oBc" id="Hoh-9c-Yzr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zNP-Ag-GEk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1332" y="165"/>
+            <point key="canvasLocation" x="1330.4347826086957" y="164.73214285714286"/>
         </scene>
     </scenes>
 </document>
