--- a/WeatherApp/View/Base.lproj/Main.storyboard
+++ b/WeatherApp/View/Base.lproj/Main.storyboard
@@ -43,15 +43,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Latitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mG-af-dJ7">
-                                <rect key="frame" x="45" y="239" width="126" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgZ-d9-oBc">
+                                <rect key="frame" x="211" y="239" width="102" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Logitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgZ-d9-oBc">
-                                <rect key="frame" x="211" y="239" width="102" height="28"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mG-af-dJ7">
+                                <rect key="frame" x="34" y="237" width="126" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -63,8 +63,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="CBn-Dh-ZEx"/>
                     <connections>
-                        <outlet property="latLabel" destination="0mG-af-dJ7" id="iTW-uk-5nF"/>
-                        <outlet property="lonLabel" destination="DgZ-d9-oBc" id="Hoh-9c-Yzr"/>
+                        <outlet property="dateLabel" destination="0mG-af-dJ7" id="6Fg-T3-cru"/>
+                        <outlet property="nameLabel" destination="DgZ-d9-oBc" id="Oj5-7n-H0Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zNP-Ag-GEk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
