--- a/WeatherApp/View/Base.lproj/Main.storyboard
+++ b/WeatherApp/View/Base.lproj/Main.storyboard
@@ -72,8 +72,8 @@
                     <connections>
                         <outlet property="cityName" destination="nDW-hd-WaH" id="ovA-Zq-jVU"/>
                         <outlet property="dateLabel" destination="rL9-vU-uDy" id="CXQ-du-pDA"/>
-                        <outlet property="descriptionLabel" destination="pNk-28-4EI" id="sQf-Vx-tcN"/>
-                        <outlet property="icon" destination="Wl6-mg-9Ht" id="C6L-dq-eca"/>
+                        <outlet property="summeryIcon" destination="Wl6-mg-9Ht" id="Xkm-rK-R5c"/>
+                        <outlet property="summeryLabel" destination="pNk-28-4EI" id="zMx-6Z-qkh"/>
                         <outlet property="tempLabel" destination="6oB-c0-s5k" id="NlM-kN-bBE"/>
                     </connections>
                 </viewController>
